CUI: buttons: fix line-height especially in the small buttons (alignment was off)

--- a/src/scss/themes/fylr/_variables.scss
+++ b/src/scss/themes/fylr/_variables.scss
@@ -311,7 +311,6 @@ $btn-visually-square-factor: 1.0675 !default;
 $btn-padding-x: 			0.85rem !default;
 $btn-height: 				30px !default;
 $btn-font-size: 			$font-size-base !default;
-$btn-line-height: 			$line-height-sm !default;
 $btn-border-radius:			$enable-btn-border-radius * 2px !default;
 // Small size
 $btn-padding-x-sm: 			0.5rem !default;
